# TradingClientExchange

./: CMakeLists.txt  README.md
include/: ExecutionEngine.hpp  OrderBook.hpp
research/py/tcx/: __init__.py  _ffi.py  engine.py  event.py
src/: EngineRunner.cpp  EngineRunner.hpp  ExecutionEngine.cpp  ExecutionEngine.hpp  Order.cpp  Order.hpp  OrderBook.cpp  api_c.cpp  api_c.h  main.cpp
tests/: EngineRunnerTests.cpp  ExecutionEngineTests.cpp  OrderBookTests.cpp  OrderTests.cpp  test_python_wrapper.py
